brush-parser/src/snapshots/brush_parser__parser__tests__parse_function_with_pipe_redirection-2.snap
---
source: brush-parser/src/parser.rs
expression: "ParseResult { input, result: &seq }"
---
ParseResult(
  input: "foo() { echo 1; } |& cat",
  result: [
    Function(FunctionDefinition(
      fname: "foo",
      body: FunctionBody(BraceGroup(BraceGroupCommand(List([
        Item(AndOr(
          first: Pipeline(
            seq: [
              Simple(Simple(
                w: Some(W(
                  v: "echo",
                  loc: Some(Loc(
                    start: Pos(
                      idx: 8,
                      line: 1,
                      col: 9,
                    ),
                    end: Pos(
                      idx: 12,
                      line: 1,
                      col: 13,
                    ),
                  )),
                )),
                suffix: Some(Suffix([
                  Word(W(
                    v: "1",
                    loc: Some(Loc(
                      start: Pos(
                        idx: 13,
                        line: 1,
                        col: 14,
                      ),
                      end: Pos(
                        idx: 14,
                        line: 1,
                        col: 15,
                      ),
                    )),
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]))), Some(RedirectList([
        File(Some(2), DuplicateOutput, Fd(1)),
      ]))),
      source: "",
    )),
    Simple(Simple(
      w: Some(W(
        v: "cat",
        loc: Some(Loc(
          start: Pos(
            idx: 21,
            line: 1,
            col: 22,
          ),
          end: Pos(
            idx: 24,
            line: 1,
            col: 25,
          ),
        )),
      )),
    )),
  ],
)
