brush-parser/src/snapshots/brush_parser__parser__tests__parse_here_doc_with_no_trailing_newline.snap
---
source: brush-parser/src/parser.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "cat <<EOF\nSomething\nEOF",
  result: Program(
    cmds: [
      List([
        Item(AndOr(
          first: Pipeline(
            seq: [
              Simple(Simple(
                w: Some(W(
                  v: "cat",
                )),
                suffix: Some(Suffix([
                  IoRedirect(HereDocument(None, IoHereDocument(
                    requires_expansion: true,
                    here_end: W(
                      v: "EOF",
                    ),
                    doc: W(
                      v: "Something\n",
                    ),
                  ))),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
